[package]
name = "betterdisplay-kvm"
description = "A KVM switch for BetterDisplay"
license = "MIT"
version = "0.0.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/Hacksore/betterdisplay-kvm"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.4", features = ["derive"] }
comfy-table = "7"
env_logger = "0.11.8"
futures-lite = "2.0"
log = "0.4.27"
nusb = "0.2.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
toml = "0.9.5"
lunchctl = "0.1.0"
flexi_logger = "0.31"

[[bin]]
name = "betterdisplay-kvm"
path = "src/main.rs"
